--- a/kuma/views/editproduct.ejs
+++ b/kuma/views/editproduct.ejs
@@ -88,6 +88,16 @@
                                 <input type="number" class="form-control" name="price" value="<%= product.price %>" required>
                             </div>
                             <div class="form-group">
+                                <label for="condition">Condition:</label>
+                                <select class="form-control" name="condition" id="condition" required>
+                                    <option value="new">Brand New</option>
+                                    <option value="like_new">Like New</option>
+                                    <option value="very_good">Very Good</option>
+                                    <option value="good">Good</option>
+                                    <option value="acceptable">Acceptable</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
                                 <label for="category">Category:</label>
                                 <select class="form-control" name="category" required>
                                     <option value="phones" <%= product.category === 'phones' ? 'selected' : '' %>>Phones</option>
